# newsletter-server

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: general.yml
.sqlx/: query-7bb6f5cf70ebfe21400cc05e44a7237f469476f80588c3efc5e44966318a7e9a.json
migrations/: 20250517115423_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
