[package]
name = "newsletter-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-server"

[dependencies]
actix-web = "4.11.0"
reqwest = "0.12.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.15"
