[package]
name = "newsletter-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-server"

[dependencies]
actix-web = "4.11.0"
reqwest = "0.12.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.15.11"
chrono = "0.4.41"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
reqwest = "0.12.15"
